[gd_scene load_steps=5 format=3 uid="uid://o6402m5o0mus"]

[ext_resource type="Texture2D" uid="uid://c1fh4ic3sppo4" path="res://scenes/world/Buildings/SleepingBag/SleepingBag.png" id="1_aecef"]
[ext_resource type="Material" uid="uid://rtn2ess0qjq5" path="res://scenes/ui/OnHoverMat.tres" id="1_gnl7p"]
[ext_resource type="Script" uid="uid://gks2xgo4oi6e" path="res://scenes/world/Buildings/SleepingBag/SleepingBag.gd" id="1_s70qy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_whtbc"]
radius = 16.0
height = 54.0

[node name="SleepingBag" type="Area2D"]
script = ExtResource("1_s70qy")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_gnl7p")
texture = ExtResource("1_aecef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_whtbc")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
